kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: familyeye-server
  labels:
    app: familyeye-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: familyeye-server
  template:
    metadata:
      labels:
        app: familyeye-server
    spec:
      containers:
        - name: server
          image: ghcr.io/SkriptyRobert/FamilyEye/familyeye-server:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8443
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
