kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: familyeye-server
  labels:
    app: familyeye-server
spec:
  type: ClusterIP
  ports:
    - port: 8443
      targetPort: 8443
      protocol: TCP
      name: https
  selector:
    app: familyeye-server
